// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Connect(withCurrentUser(HotspotViewerRenderer))
  commentTextRef={
    Object {
      "current": null,
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  loading={true}
  onCloseStatusUpdateSuccessModal={[Function]}
  onLocationClick={[MockFunction]}
  onShowCommentForm={[Function]}
  onSwitchFilterToStatusOfUpdatedHotspot={[Function]}
  onUpdateHotspot={[Function]}
  showStatusUpdateSuccessModal={false}
/>
`;

exports[`should render correctly 2`] = `
<Connect(withCurrentUser(HotspotViewerRenderer))
  commentTextRef={
    Object {
      "current": null,
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  hotspot={
    Object {
      "id": "I am a detailled hotspot",
    }
  }
  loading={false}
  onCloseStatusUpdateSuccessModal={[Function]}
  onLocationClick={[MockFunction]}
  onShowCommentForm={[Function]}
  onSwitchFilterToStatusOfUpdatedHotspot={[Function]}
  onUpdateHotspot={[Function]}
  showStatusUpdateSuccessModal={false}
/>
`;
